--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,134 @@
-flask
-psycopg2
+apturl==0.5.2
+bcrypt==3.1.7
+blinker==1.6.2
+blis==0.7.9
+Brlapi==0.7.0
+catalogue==2.0.8
+certifi==2019.11.28
+chardet==3.0.4
+cliapp==1.20180812.1
+click==8.1.3
+cmake==3.26.4
+cmdtest==0.32+git
+colorama==0.4.3
+command-not-found==0.3
+confection==0.1.0
+cryptography==2.8
+cupshelpers==1.0
+cymem==2.0.7
+dbus-python==1.2.16
+defer==1.0.6
+distro==1.4.0
+distro-info===0.23ubuntu1
+duplicity==0.8.12.0
+editdistpy==0.1.3
+en-core-web-sm==3.5.0
+entrypoints==0.3
+fasteners==0.14.1
+filelock==3.12.2
+Flask==2.3.2
+fsspec==2023.6.0
+future==0.18.2
 gunicorn==20.1.0
+httplib2==0.14.0
+huggingface-hub==0.15.1
+idna==2.8
+importlib-metadata==6.8.0
+itsdangerous==2.1.2
+Jinja2==3.1.2
+keyring==18.0.1
+langcodes==3.3.0
+language-selector==0.1
+launchpadlib==1.10.13
+lazr.restfulclient==0.14.2
+lazr.uri==1.0.3
+lemminflect==0.2.3
+lit==16.0.6
+lmproof==0.3.0
+lockfile==0.12.2
+louis==3.12.0
+macaroonbakery==1.3.1
+Mako==1.1.0
+Markdown==3.1.1
+MarkupSafe==2.1.3
+monotonic==1.5
+mpmath==1.3.0
+murmurhash==1.0.9
+mysql-connector-python==8.0.33
+netifaces==0.10.4
+networkx==3.1
+numpy==1.17.4
+nvidia-cublas-cu11==11.10.3.66
+nvidia-cuda-cupti-cu11==11.7.101
+nvidia-cuda-nvrtc-cu11==11.7.99
+nvidia-cuda-runtime-cu11==11.7.99
+nvidia-cudnn-cu11==8.5.0.96
+nvidia-cufft-cu11==10.9.0.58
+nvidia-curand-cu11==10.2.10.91
+nvidia-cusolver-cu11==11.4.0.1
+nvidia-cusparse-cu11==11.7.4.91
+nvidia-nccl-cu11==2.14.3
+nvidia-nvtx-cu11==11.7.91
+oauthlib==3.1.0
+olefile==0.46
+packaging==20.3
+paramiko==2.6.0
+pathy==0.10.2
+pexpect==4.6.0
+Pillow==7.0.0
+preshed==3.0.8
+protobuf==3.20.3
+psycopg2==2.9.6
+pycairo==1.16.2
+pycups==1.9.73
+pydantic==1.10.10
+pygame==1.9.6
+Pygments==2.3.1
+PyGObject==3.36.0
+PyJWT==1.7.1
+pymacaroons==0.13.0
+PyNaCl==1.3.0
+pyparsing==2.4.6
+pyRFC3339==1.1
+python-apt==2.0.1+ubuntu0.20.4.1
+python-dateutil==2.7.3
+python-debian===0.1.36ubuntu1
+pytz==2019.3
+pyxdg==0.26
+PyYAML==5.3.1
+regex==2023.6.3
+reportlab==3.5.34
+requests==2.22.0
+requests-unixsocket==0.2.0
+safetensors==0.3.1
+SecretStorage==2.3.1
+simplejson==3.16.0
+six==1.14.0
+smart-open==6.3.0
+spacy==3.5.4
+spacy-legacy==3.0.12
+spacy-loggers==1.0.4
+srsly==2.4.6
+sympy==1.12
+symspellpy==6.7.7
+systemd-python==234
+thinc==8.1.10
+tokenizers==0.13.3
+torch==2.0.1
+tqdm==4.65.0
+transformers==4.30.2
+triton==2.0.0
+ttystatus==0.38
+typer==0.9.0
+typing-extensions==4.7.1
+ubuntu-advantage-tools==8001
+ubuntu-drivers-common==0.0.0
+ufw==0.36
+unattended-upgrades==0.1
+urllib3==1.25.8
+usb-creator==0.3.7
+wadllib==1.3.3
+wasabi==1.1.2
+Werkzeug==2.3.6
+xkit==0.0.0
+zipp==3.16.0
